added parallel clustering on groups

--- a/vignettes/netClust.Rmd
+++ b/vignettes/netClust.Rmd
@@ -30,5 +30,7 @@ ss <- c(400,500,600) # samples in each cluster
 myData <- sampleData(kclust = 3, Nvars = 20, sseed = 2, samplesizes = ss)
 
 # Network-based clustering
+clusterResT <- netClust(myData, kclust = 3)
 clusterRes <- netCluster(myData, kclust = 3)
+clusterResP <- netClusterParallel(myData, kclust = 3)
 ```
