--- a/vignettes/netClust.Rmd
+++ b/vignettes/netClust.Rmd
@@ -27,11 +27,11 @@ Simulate binary data and learn clusters subsequently.
 ```{r, eval = FALSE}
 # Simulate binary data
 ss <- c(400, 500, 600) # samples in each cluster
-my_data <- sampleData(kclust = 3, Nvars = 20, sseed = 2, samplesizes = ss)
+my_data <- netClust::sampleData(kclust = 3, Nvars = 20, sseed = 2, samplesizes = ss)
 
 # Network-based clustering
-cluster_res_t <- netClust(myData, kclust = 3)
-# cluster_res <- netCluster(myData, kclust = 3)
-# cluster_res_test <- netClustParallel(myData, kclust = 3)
-# cluster_res_p <- netClusterParallel(myData, kclust = 3)
+cluster_res_t <- netClust(my_data, kclust = 3)
+# cluster_res <- netCluster(my_data, kclust = 3)
+# cluster_res_test <- netClustParallel(my_data, kclust = 3)
+# cluster_res_p <- netClusterParallel(my_data, kclust = 3)
 ```
