--- a/vignettes/netClust.Rmd
+++ b/vignettes/netClust.Rmd
@@ -41,18 +41,21 @@ cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters,
                               newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=FALSE)
 
 cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters, 
-                              newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=TRUE, bdecatCvec=rep(2,23))
+                              newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=TRUE)
 
-
-# categorical_sampled_data <- matrix(as.character(sampled_data),    # Convert to numeric matrix
-#                   ncol = ncol(sampled_data))
-# 
-# cluster_res_t <- get_clusters(categorical_sampled_data, k_clust = kclusters, 
-#                               newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=TRUE)
 
 library(mclust)
 adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
 
+
+res_kmeans1 <- kmeans(sampled_data, kclusters)
+adjustedRandIndex(simulation_data$cluster_membership, res_kmeans1$cluster)
+
+aa <- mclust::Mclust(sampled_data, kclusters)
+adjustedRandIndex(simulation_data$cluster_membership, aa$classification)
+
+res_BBMM2 <- BBMMclusterEM(sampled_data, chi = 0.5, k_clust = 5, startseed = 1 * 100, nIterations = 10, verbose = TRUE)
+adjustedRandIndex(simulation_data$cluster_membership, res_BBMM2$newclustermembership)
 
 # alternatives:
 # cluster_res <- netCluster(my_data, kclust = 3)
