--- a/vignettes/netClust.Rmd
+++ b/vignettes/netClust.Rmd
@@ -37,28 +37,29 @@ sampled_data <- simulation_data$sampled_data
 # Network-based clustering
 cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters)
 
-cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters, 
-                              newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=FALSE)
+# cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters, 
+#                               newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=FALSE)
 
 library(mclust)
 adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
 
-cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters, 
-                              newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=TRUE)
 
-adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
-
-adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
-
-
-res_kmeans1 <- kmeans(sampled_data, kclusters)
-adjustedRandIndex(simulation_data$cluster_membership, res_kmeans1$cluster)
-
-aa <- mclust::Mclust(sampled_data, kclusters)
-adjustedRandIndex(simulation_data$cluster_membership, aa$classification)
-
-res_BBMM2 <- BBMMclusterEM(sampled_data, chi = 0.5, k_clust = 5, startseed = 1 * 100, nIterations = 10, verbose = TRUE)
-adjustedRandIndex(simulation_data$cluster_membership, res_BBMM2$newclustermembership)
+# cluster_res_t <- get_clusters(sampled_data, k_clust = kclusters, 
+#                               newallrelativeprobabs = cluster_res_t$newallrelativeprobabs, categorical=TRUE)
+# 
+# adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
+# 
+# adjustedRandIndex(simulation_data$cluster_membership, cluster_res_t$clustermembership)
+# 
+# 
+# res_kmeans1 <- kmeans(sampled_data, kclusters)
+# adjustedRandIndex(simulation_data$cluster_membership, res_kmeans1$cluster)
+# 
+# aa <- mclust::Mclust(sampled_data, kclusters)
+# adjustedRandIndex(simulation_data$cluster_membership, aa$classification)
+# 
+# res_BBMM2 <- BBMMclusterEM(sampled_data, chi = 0.5, k_clust = 5, startseed = 1 * 100, nIterations = 10, verbose = TRUE)
+# adjustedRandIndex(simulation_data$cluster_membership, res_BBMM2$newclustermembership)
 
 
 # alternatives:
