--- a/vignettes/graphClust.Rmd
+++ b/vignettes/graphClust.Rmd
@@ -56,9 +56,9 @@ library(ggpubr)
 
 my_graph <- igraph::graph_from_adjacency_matrix(cluster_res_t$DAGs[[1]], mode="directed")
 
-nice_DAG_plot(my_graph)
+graphClust:::nice_DAG_plot(my_graph)
 
-plot_clusters(cluster_res_t)
+graphClust:::plot_clusters(cluster_res_t)
 
 
 
