--- a/vignettes/clustNet.Rmd
+++ b/vignettes/clustNet.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "graphClust"
+title: "clustNet"
 output: rmarkdown::html_vignette
 description: >
   Network-based clustering of binary data. Optional adjustment for covariates. 
 vignette: >
-  %\VignetteIndexEntry{graphClust}
+  %\VignetteIndexEntry{clustNet}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(graphClust)
+library(clustNet)
 ```
 
 
@@ -28,7 +28,7 @@ Simulate binary data and learn clusters subsequently.
 # Simulate binary data
 k_clust <- 3
 ss <- c(400, 500, 600) # samples in each cluster
-simulation_data <- graphClust::sampleData(k_clust = k_clust, n_vars = 20, n_samples = ss)
+simulation_data <- clustNet::sampleData(k_clust = k_clust, n_vars = 20, n_samples = ss)
 
 sampled_data <- simulation_data$sampled_data
 
@@ -54,9 +54,9 @@ library(ggpubr)
 
 my_graph <- igraph::graph_from_adjacency_matrix(cluster_res_t$DAGs[[1]], mode="directed")
 
-graphClust:::nice_DAG_plot(my_graph)
+clustNet:::nice_DAG_plot(my_graph)
 
-graphClust:::plot_clusters(cluster_res_t)
+clustNet:::plot_clusters(cluster_res_t)
 
 
 
@@ -90,7 +90,7 @@ graphClust:::plot_clusters(cluster_res_t)
 
 
 # alternatives:
-# cluster_res <- graphCluster(my_data, kclust = 3)
-# cluster_res_test <- graphClustParallel(my_data, kclust = 3)
-# cluster_res_p <- graphClusterParallel(my_data, kclust = 3)
+# cluster_res <- clustNeter(my_data, kclust = 3)
+# cluster_res_test <- clustNetParallel(my_data, kclust = 3)
+# cluster_res_p <- clustNeterParallel(my_data, kclust = 3)
 ```
